--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -217,7 +217,10 @@ services:
       - PYTHONUNBUFFERED=1
       - CUDA_VISIBLE_DEVICES=0
       - STABLEVITON_WEIGHTS_DIR=/app/storage/models/stableviton/weights
-      - STABLEVITON_INFER_CMD=python /app/infer_wrapper.py --config_path third_party/stableviton/StableVITON-master/configs/VITONHD.yaml --model_load_path /app/third_party/stableviton/StableVITON-master/ckpts/VITONHD_PBE_pose.ckpt --data_root_dir {DATA_ROOT} --batch_size 1 --img_H 320 --img_W 256 --save_dir {OUT} --unpair
+      - STABLEVITON_INFER_CMD=python /app/infer_wrapper.py --config_path third_party/stableviton/StableVITON-master/configs/VITONHD.yaml --model_load_path /app/third_party/stableviton/StableVITON-master/ckpts/VITONHD_PBE_pose.ckpt --data_root_dir {DATA_ROOT} --batch_size 1 --img_H 512 --img_W 384 --save_dir {OUT} --unpair --repaint
+      - SCHP_REPO_DIR=/app/third_party/schp/Self-Correction-Human-Parsing-master
+      - SCHP_MODEL_PATH=/app/storage/models/schp_lip/20190826/exp-schp-201908261155-lip.pth
+      - SCHP_INFER_CMD=python scripts/schp_infer.py --weights {WEIGHTS} --image {IMAGE} --out {OUT}
       - PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:128,garbage_collection_threshold:0.9
       - XFORMERS_MEMORY_EFFICIENT_ATTENTION=1
       - HF_HOME=/app/storage/models/hf
@@ -230,7 +233,7 @@ services:
       - STABLEVITON_VERBOSE=1
       - STABLEVITON_FALLBACK=0
       - STABLEVITON_FORCE_FP16=1
-      - STABLEVITON_DENOISE_STEPS=30
+      - STABLEVITON_DENOISE_STEPS=50
     ports:
       - "9010:9010"
     volumes:
