--- a/Dockerfile.vton_stable
+++ b/Dockerfile.vton_stable
@@ -49,6 +49,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
 
 COPY vton_service/server.py /app/server.py
 COPY vton_service/infer_wrapper.py /app/infer_wrapper.py
+COPY vton_service/fetch_densepose.py /app/fetch_densepose.py
 
 EXPOSE 9010
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "9010"]
+CMD ["bash", "-lc", "python /app/fetch_densepose.py || true; uvicorn server:app --host 0.0.0.0 --port 9010"]
