--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -257,10 +257,11 @@ services:
     ports:
       - "9010:9010"
     healthcheck:
-      test: ["CMD-SHELL", "curl -sf http://localhost:9010/health || exit 1"]
+      test: ["CMD-SHELL", "python - <<'PY'\nimport sys, urllib.request\ntry:\n  r = urllib.request.urlopen('http://localhost:9010/health', timeout=3)\n  sys.exit(0 if r.status==200 else 1)\nexcept Exception:\n  sys.exit(1)\nPY"]
       interval: 15s
       timeout: 5s
       retries: 10
+      start_period: 60s
     volumes:
       - ./third_party:/app/third_party:ro
       - ./storage:/app/storage
