--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,16 +48,24 @@ services:
       - REALESRGAN_WEIGHTS=/app/storage/models/realesrgan/x4plus/RealESRGAN_x4plus.pth
       - SDXL_BASE_PATH=/app/storage/models/sdxl_base/1.0/sd_xl_base_1.0.safetensors
       - SDXL_REFINER_PATH=/app/storage/models/sdxl_refiner/1.0/sd_xl_refiner_1.0.safetensors
+      - SDXL_BASE_ID=stabilityai/stable-diffusion-xl-base-1.0
+      - SDXL_REFINER_ID=stabilityai/stable-diffusion-xl-refiner-1.0
+      - FORCE_SDXL_PRETRAINED=1
       - CONTROLNET_UNION_SDXL_DIR=/app/storage/models/snapshots/xinsir-controlnet-union-sdxl-1.0
       - ANNOTATOR_DIR=/app/storage/models/snapshots/lllyasviel-Annotators
       - IP_ADAPTER_SDXL_DIR=/app/storage/models/snapshots/h94-IP-Adapter/sdxl_models
       - IP_ADAPTER_SDXL_WEIGHTS_NAME=ip-adapter_sdxl.safetensors
       - IP_ADAPTER_GARMENT_SCALE=1.0
       - IP_ADAPTER_FACE_SCALE=0.85
-      - SDXL_STEPS=50
-      - SDXL_GUIDANCE=6.0
+      - SDXL_STEPS=60
+      - SDXL_GUIDANCE=6.5
       - SDXL_REFINER_STEPS=20
-      - SDXL_REFINER_GUIDANCE=5.0
+      - SDXL_REFINER_GUIDANCE=5.5
+      - SDXL_PROMPT=ultra-detailed, photorealistic apparel try-on, crisp fabric texture, natural lighting, sharp focus, high resolution
+      - SDXL_NEGATIVE=blurry, low-resolution, out of focus, artifacts, deformed body, watermark, oversmooth, noise
+      - FINISHER_RESIZE_LONG=1280
+      - SDXL_BLEND_PRESERVE_OUTSIDE=1
+      - SDXL_BLEND_PRESERVE_KERNEL=21
       - CTRL_POSE=0.9
       - CTRL_DEPTH=0.6
       - CTRL_NORMAL=0.5
@@ -119,11 +127,19 @@ services:
       - REALESRGAN_WEIGHTS=/app/storage/models/realesrgan/x4plus/RealESRGAN_x4plus.pth
       - SDXL_BASE_PATH=/app/storage/models/sdxl_base/1.0/sd_xl_base_1.0.safetensors
       - SDXL_REFINER_PATH=/app/storage/models/sdxl_refiner/1.0/sd_xl_refiner_1.0.safetensors
+      - SDXL_BASE_ID=stabilityai/stable-diffusion-xl-base-1.0
+      - SDXL_REFINER_ID=stabilityai/stable-diffusion-xl-refiner-1.0
+      - FORCE_SDXL_PRETRAINED=1
       - CONTROLNET_UNION_SDXL_DIR=/app/storage/models/snapshots/xinsir-controlnet-union-sdxl-1.0
       - ANNOTATOR_DIR=/app/storage/models/snapshots/lllyasviel-Annotators
       - IP_ADAPTER_SDXL_DIR=/app/storage/models/snapshots/h94-IP-Adapter/sdxl_models
       - IP_ADAPTER_SDXL_WEIGHTS_NAME=ip-adapter_sdxl.safetensors
       - IP_ADAPTER_GARMENT_SCALE=1.0
+      - SDXL_PROMPT=ultra-detailed, photorealistic apparel try-on, crisp fabric texture, natural lighting, sharp focus, high resolution
+      - SDXL_NEGATIVE=blurry, low-resolution, out of focus, artifacts, deformed body, watermark, oversmooth, noise
+      - FINISHER_RESIZE_LONG=1280
+      - SDXL_BLEND_PRESERVE_OUTSIDE=1
+      - SDXL_BLEND_PRESERVE_KERNEL=21
       - HF_TOKEN=${HF_TOKEN}
       - HUGGINGFACE_TOKEN=${HF_TOKEN}
       - HUGGINGFACEHUB_API_TOKEN=${HF_TOKEN}
