modified:   Dockerfile.vton_stable 	modified:   backend/app/artifacts.py 	modified:   configs/pipeline.yaml 	modified:   docker-compose.yml 	modified:   pipeline/controls.py 	new file:   pipeline/matting.py 	modified:   pipeline/pipeline.py 	modified:   providers/finisher_sdxl_controlnet.py 	modified:   providers/pose_ultralytics.py 	modified:   providers/vton_local.py 	new file:   scripts/gpu_lock_cli.py 	new file:   vton_service/gpu_lock.py 	modified:   vton_service/server.py

--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -39,7 +39,7 @@ vton:
   provider: stableviton  # local | stableviton | remote
 
 providers:
-  segmentation: local  # local | torchvision | remote
+  segmentation: torchvision  # local | torchvision | remote
   pose: yolov8  # mediapipe | yolov8 | remote
   geometry: smplx  # stub | smplx | remote
 
