--- a/Dockerfile.api.gpu
+++ b/Dockerfile.api.gpu
@@ -2,7 +2,10 @@
 FROM nvidia/cuda:12.4.1-runtime-ubuntu22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install -y python3 python3-venv python3-pip python-is-python3 && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y \
+    python3 python3-venv python3-pip python-is-python3 \
+    libgl1 libglib2.0-0 \
+  && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 # Copy only requirements to leverage Docker layer cache
